增加 彩云小译 翻译引擎

--- a/src/main/resources/messages/TranslationBundle.properties
+++ b/src/main/resources/messages/TranslationBundle.properties
@@ -86,6 +86,7 @@ translation.engine.baidu.name=Baidu Translate
 translation.engine.ali.name=Alibaba Translate
 translation.engine.deepl.name=DeepL Translator
 translation.engine.openai.name=OpenAI Translator
+translation.engine.caiyun.name=CaiYun Translator
 title.targetLanguage=Target Language
 tip.label.webInterpretation=Web:
 tip.label.sourceLanguage=Translate from
