--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ pluginSinceBuild = 213
 pluginUntilBuild =
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IU
+platformType = IC
 platformVersion = 2021.3.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
